bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:4: error: value xor is not a member of Boolean
  return (aSmile xor bSmile)
                 ^